@startuml
class User {
 +id: UUID
 +name: String
 +middleName: String
 +surname: String
 +birthDate: Date
 +city: City
 +phoneNumber: String
 +email: String
 +nickname: String
 +passwordHash: String
 +contactInfo: ContactInfo
 +avatarLink: String
 +aboutUser: String
}

class City {
 +id: UUID
 +cityName: String
 +countryName: String
}

class HardSkills {
 +id: UUID
 +skill: String
}

class Subscription {
 +followeeId: User
 +followerId: User
}

User *-- Subscription 
User "n" o-- "1" City
User "n" o-- "n" HardSkills
@enduml